--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react",
+  "name": "package.json",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "start: Frontend/index.html",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
