--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongose": "^0.0.2-security",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
+    "react": "^19.1.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
