--- a/karwebsite/package.json
+++ b/karwebsite/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "karwebsite": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
