--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "csc131-kachowautorepair-spring25": "file:",
     "devenv": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
